Tweak the colors so they look radder

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   }
 
   .enabled {
-    background-color: green;
+    background-color: rgba(0, 255, 0, 1.0);
   }
 
   .disabled {
-    background-color: red;
+    background-color: rgba(0, 255, 0, 0.1);
   }
 
 </style>
