Add ability to reset skills

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     </table>
 
     <h3>Skills</h3>
+    <button v-on:click="reset_skills">Reset skills</button>
     <h4>Specialized</h4>
     <ul>
       <li v-for="skill in specialized_skills">
