--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       <li v-for="skill in specialized_skills">
         {{ skill.name }}
         {{ skill.value }}
-        <button v-on:click="training_increase" :skill="skill.key" class="disabled">+</button>
-        <button v-on:click="training_decrease" :skill="skill.key">-</button>
+        <button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button>
+        <button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button>
       </li>
     </ul>
 
@@ -135,8 +135,8 @@
       <li v-for="skill in trained_skills">
         {{ skill.name }}
         {{ skill.value }}
-        <button v-on:click="training_increase" :skill="skill.key" :class="skill.enabled">+</button>
-        <button v-on:click="training_decrease" :skill="skill.key" class="enabled">-</button>
+        <button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button>
+        <button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button>
       </li>
     </ul>
 
@@ -145,8 +145,8 @@
       <li v-for="skill in untrained_skills">
         {{ skill.name }}
         {{ skill.value }}
-        <button v-on:click="training_increase" :skill="skill.key" :class="skill.enabled">+</button>
-        <button v-on:click="training_decrease" :skill="skill.key" class="disabled">-</button>
+        <button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button>
+        <button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button>
       </li>
     </ul>
 
@@ -155,8 +155,8 @@
       <li v-for="skill in unusable_skills">
         {{ skill.name }}
         {{ skill.value }}
-        <button v-on:click="training_increase" :skill="skill.key" :class="skill.enabled">+</button>
-        <button v-on:click="training_decrease" :skill="skill.key" class="disabled">-</button>
+        <button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button>
+        <button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button>
       </li>
     </ul>
 </div>
