--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
 <div id="app">
     <h3>Debug</h3>
     <div>Attr sum: {{attr_sum}}</div>
+    <div>Spec total: {{ skill_credits_spent_specialized }}</div>
 
     <h3>Character</h3>
     <div>Name: {{ name }}</div>
     <div>Level: <input type="text" v-model="level" /></div>
-    <div>Skill credits: {{used_skill_credits}} / {{total_skill_credits}}</div>
+    <div>Skill credits: {{ skill_credits_spent }} / {{ skill_credits_total }}</div>
     <div>Max: <input type="checkbox" v-model="max" /></div>
     <div>
       Extra Skill Credits:
