--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   div.box {
     float: left;
-    width: 400px;
+    width: 500px;
   }
 
   #reset-skills {
@@ -54,6 +54,10 @@
 
   .skill_value {
     width: 75px;
+  }
+
+  .skill_cost {
+    width: 25px;
   }
 
   .skill_button {
@@ -162,8 +166,10 @@
         <li v-for="skill in specialized_skills">
           <span class="skill_name">{{ skill.name }}</span>
           <span class="skill_value">{{ skill.value }}</span>
+          <span class="skill_cost"></span>
           <span class="skill_button"><button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button></span>
           <span class="skill_button"><button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button></span>
+          <span class="skill_cost">{{ skill.cost_down }}</span>
         </li>
       </ul>
 
@@ -173,8 +179,10 @@
         <li v-for="skill in trained_skills">
           <span class="skill_name">{{ skill.name }}</span>
           <span class="skill_value">{{ skill.value }}</span>
+          <span class="skill_cost">{{ skill.cost_up}}</span>
           <span class="skill_button"><button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button></span>
           <span class="skill_button"><button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button></span>
+          <span class="skill_cost">{{ skill.cost_down }}</span>
         </li>
       </ul>
 
@@ -184,8 +192,10 @@
         <li v-for="skill in untrained_skills">
           <span class="skill_name">{{ skill.name }}</span>
           <span class="skill_value">{{ skill.value }}</span>
+          <span class="skill_cost">{{ skill.cost_up }}</span>
           <span class="skill_button"><button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button></span>
           <span class="skill_button"><button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button></span>
+          <span class="skill_cost"></span>
         </li>
       </ul>
 
@@ -195,8 +205,11 @@
         <li v-for="skill in unusable_skills">
           <span class="skill_name">{{ skill.name }}</span>
           <span class="skill_value">{{ skill.value }}</span>
+          <span class="skill_cost">{{ skill.up }}</span>
           <span class="skill_button"><button v-on:click="training_increase" :skill="skill.key" :class="skill.increase">+</button></span>
           <span class="skill_button"><button v-on:click="training_decrease" :skill="skill.key" :class="skill.decrease">-</button></span>
+          <span class="skill_cost"></span>
+
         </li>
       </ul>
   </div>
