Clean up rendering

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
   div.box {
     float: left;
-    width: 500px;
   }
 
   #reset-skills {
@@ -158,7 +157,7 @@
     </div>
 
     <div class="box">
-      Skills <button id="reset-skills" v-on:click="reset_skills">Reset skills</button>
+      Skills <button id="reset-skills" v-on:click="reset_skills">Reset skills</button></br />
 
       Specialized
 
