Show available skill cr over total

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <h3>Character</h3>
   <div>Name: {{ name }}</div>
   <div>Level: <input type="text" v-model="level" /></div>
-  <div>Skill credits: {{ skill_credits_spent }} / {{ skill_credits_total }}</div>
+  <div>Skill credits: {{ skill_credits_available }} / {{ skill_credits_total }}</div>
   <div>Max: <input type="checkbox" v-model="max" /></div>
   <div>
     Extra Skill Credits:
